<resources>
    <string name="app_name">BeaconiteApp</string>
    <string name="action_backToMain">Main Menu</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="title_activity_ranging">RangingActivity</string>
    <string name="header">Received Data</string>
    <string name="UUID">UUID: </string>
    <string name="RSSI">RSSI: </string>
    <string name="major">Major: </string>
    <string name="minor">Minor:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="distance">Distance:</string>
    <string name="found">Found:</string>
    <string name="not_scanning">Not scanning for Beacons</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="RowNumberTitle">No.</string>
    <string name="beacon_data_service_stopped">BeaconDataService has stopped.</string>
    <string name="beacon_data_service_started">BeaconDataService started.</string>
    <string name="title_activity_generate_caches">GenerateCaches</string>
    <string name="startStopRecordCacheBtn">Record cache</string>
    <string name="stopCacheRecording">Stop</string>
    <string name="cacheRecordText">Create a new cache or pick a cache from list</string>
    <string name="startChartActivity">To the Chart!</string>
    <string name="newCache">New Cache</string>
    <string name="tableBtnText">To the table!</string>
    <string name="exitBeaconite">Exit App</string>
    <string name="useSimulation">Use BeaconSimulator</string>
    <string name="startCacheActivity">Record some Caches</string>
    <string name="resetDataService">Reset DataService:</string>
    <string name="resetAllData">Reset all collected Data</string>
    <string name="resetBeaconData">Beacons</string>
    <string name="restartBeaconSimulation">Restart Beacon Simulation</string>
    <string name="DeleteThisCache">Delete this cache</string>
    <string name="noCache_message">No cache was selected! Recording not possible.</string>
    <string name="dialog_noCache">No Cache</string>
    <string name="whereAmI">Where am I?</string>
    <string name="cachesToGraph">Caches to Graph</string>
    <string name="scanningBeaconsForMatch">Started scanning Beacon signals and trying to find matching caches.</string>
    <string name="recordedCaches">Following caches were recorded:</string>
    <string name="cache_data_loaded">Caches were loaded from file</string>
    <string name="beaconitGraphSwitch">insert/move||edit</string>
    <string name="editGraphActivityBtn">View and Edit Graph</string>
    <string name="saveCachesBtn">Save Caches</string>
    <string name="saveGraphBtn">Save Graph</string>
    <string name="saveAllDataBtn">Save all</string>
    <string name="loadGraphBtn">Load Graph</string>
    <string name="loadAllDataBtn">Load All</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="txPower">Tx:</string>
    <string name="modeMove">Move</string>
    <string name="modeEditEdges">+ | -\nEdge</string>
    <string name="modeAnnotateEdges">Annotate\nEdge</string>
    <string name="modeAnnotateVertex">Annotate\nVertex</string>
    <string name="modeLimitAccess">Vertex:\nLimit Access</string>
    <string name="chooseAnnotation">Annotate selected edge:</string>
    <string name="chooseAnnotationVertex">Annotate selected vertex</string>
    <string name="relocation">Relocation&#8230;</string>
    <string name="seperateBtnText">Clear location data</string>
    <string name="startRelocatedGraphActivity">Graph</string>
    <string name="recordNewCachesBtnText">Record Caches</string>
    <string name="action_backToRelocation">Relocation Menu</string>
    <string name="baseGame">Base Game...</string>
    <string name="action_backToBaseGame">Base Game Menu</string>
    <string name="title_activity_base_game">Basic Game</string>
    <string name="generateBaseGameBtnText">Generate Base Game</string>
    <string name="saveCurrentGame">Save current Game Setup</string>
    <string name="viewGraphBtn">View Graph</string>
    <string name="playBaseGameActivity">Play Base Game</string>
    <string name="graphActivity">Graph</string>
    <string name="runGameInfoDialog">You now run: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tokenList">Tokens:</string>
    <string name="createStoryActivity">Create Story</string>
    <string name="makeDangerProtectionPairsBtnText">Add Danger-Protection Pair</string>
    <string name="addStoryCard">Add Story Card</string>
    <string name="placeStoryElementsBtnText">Place Story Elements in Graph</string>
    <string name="playStoryGame">Play Game</string>
    <string name="addTreasureBtnText">Add Treasure</string>
    <string name="storyToGame">Story to Game</string>
    <string name="storyElements">Story Elements</string>
    <string name="availableStoryElements">Available Story Elements</string>
    <string name="noStoryElementsCreated">No story elements have been created. Add some.</string>
    <string name="placeElementsOnGraphIntro">This is your Game Graph. Each Vertex has already been assigned a type (Danger, Protection, Treasure).\nSelect a vertex to place an available game element on it.</string>
    <string name="chooseStoryElementVertex">Choose Story Element</string>
    <string name="refreshBaseGameBtnText">Refresh Game from Graph</string>
</resources>
